Added friendly URLs. Added the Forum Store. Rewrote all the forum slice calls to use it.
Remapped sql.ErrNoRows to ErrNoRows for portability.
Removed a pointless column in the login query.
Revamped the tags and buttons on Tempra Simple, and on the profiles for the other themes.
Fixed a padding bug.
Tweaked the font sizes and padding in the Control Panel for Tempra Simple.
More progress with widgets.

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -15,8 +15,8 @@
 			<span class="lastReplyAt">{{.LastReplyAt}}</span>
 		</span>
 		<span>
-			<a class="rowtopic" href="/topic/{{.ID}}">{{.Title}}</a>
-			<br /><a class="rowsmall" href="/user/{{.CreatedBy}}">Starter: {{.CreatedByName}}</a>
+			<a class="rowtopic" href="/topic/{{.Slug}}.{{.ID}}">{{.Title}}</a>
+			<br /><a class="rowsmall" href="/user/{{.UserSlug}}.{{.CreatedBy}}">Starter: {{.CreatedByName}}</a>
 			{{if .Is_Closed}}<span class="rowsmall topic_status_e topic_status_closed" title="Status: Closed"> | &#x1F512;&#xFE0E{{end}}</span>
 		</span>
 	</div>
