--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,7 +8,7 @@
 		<li class="menu_left menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
 		{{if .CurrentUser.Loggedin}}
 		<li class="menu_left menu_account"><a href="/user/edit/critical/">Account</a></li>
-		<li class="menu_left menu_profile"><a href="/user/{{.CurrentUser.ID}}">Profile</a></li>
+		<li class="menu_left menu_profile"><a href="/user/{{.CurrentUser.Slug}}.{{.CurrentUser.ID}}">Profile</a></li>
 		{{if .CurrentUser.Is_Super_Mod}}<li class="menu_left menu_account"><a href="/panel/">Panel</a></li>{{end}}
 		<li class="menu_left menu_logout"><a href="/accounts/logout/?session={{.CurrentUser.Session}}">Logout</a></li>
 		{{else}}
