--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -6,9 +6,9 @@
 	</div>
 	<div id="panel_settings" class="colstack_item">
 		{{range $key, $value := .Something}}
-		<div class="rowitem editable_parent">
+		<div class="rowitem panel_compactrow editable_parent">
 			<a href="/panel/settings/edit/{{$key}}" class="editable_block panel_upshift">{{$key}}</a>
-			<a style="float: right;">{{$value}}</a>
+			<a class="panel_compacttext" style="float: right;">{{$value}}</a>
 		</div>
 		{{end}}
 	</div>
