--- a/themes/cosmo-conflux/public/main.css
+++ b/themes/cosmo-conflux/public/main.css
@@ -410,10 +410,19 @@ button .big { padding: 6px; }*/
 	padding-bottom: 2px;
 	color: #505050 !important; /* 80,80,80 */
 	background-color: #FFFFFF;
-	border-style: dotted;
-	border-color: #505050; /* 232,232,232. All three RGB colours being the same seems to create a shade of gray */
+	border-style: solid;
+	border-color: rgb(180,180,180);
 	border-width: 1px;
 	font-size: 15px;
+}
+
+.simple > .real_username {
+	color: #404040;
+	font-size: 16px;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .postQuote {
