--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -145,7 +145,7 @@ li a {
 	display: none;
 }
 .rowsmall {
-	font-size:12px;
+	font-size: 12px;
 }
 
 .colblock_left {
@@ -324,16 +324,33 @@ button {
 	padding-bottom: 2px;
 	color: #505050; /* 80,80,80 */
 	background-color: #FFFFFF;
-	border-style: dotted;
-	border-color: #505050; /* 232,232,232. All three RGB colours being the same seems to create a shade of gray */
+	border-style: solid;
+	border-color: #ccc;
 	border-width: 1px;
 	font-size: 15px;
 }
-button.username { position: relative; top: -0.25px; }
-.username.level { color: #303030; }
-.username.real_username { color: #404040; font-size: 17px; }
-.username.real_username:hover { color: black; }
-.post_item > .username { margin-top: 20px; display: inline-block; }
+button.username {
+	position: relative;
+	top: -0.25px;
+}
+.username.level {
+	color: #303030;
+}
+.username.real_username {
+	color: #404040;
+	font-size: 16px;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 3px;
+	padding-bottom: 3px;
+}
+.username.real_username:hover {
+	color: black;
+}
+.post_item > .username {
+	margin-top: 20px;
+	display: inline-block;
+}
 
 .post_item > .mod_button > button {
 	font-size: 15px;
