Refactored the installer's code. We're moving towards supporting multiple database engines. More progress has been made with PostgreSQL, but it's still incomplete and experimental. The items on the Social Group menu bar are no longer decorative and now let you jump from page to page. Social Group permissions are now fully functional. More features to come like privacy levels, secondary board permissions, etc. for Social Groups.
One of our dependencies added a dependecy, so we've added that dependency as a dependency.
Tweaked the ForumStore to better conform to the tests.
Fixed an issue with the generated file comment stopping the build tags from being read by the compiler for a few files.
Fixed the test system.
Renamed the route_create_topic handler to route_topic_create_submit
Moved the user table into the query generator.
Fixed a bug in MySQL where it doesn't allow unique keys longer than 180 characters.
Fixed a race condition in the forum deletion handler.
Fixed a crash bug where Gosora crashes when [rand]0[/rand] is passed to the BBCode parser.
Fixed a bug with superadmins not being able to see all the forums they should be able to.
Fixed a bug in simple_forum_session_check where it assumes every request has an error.

Tests:
Added 8 ForumStore tests.
Added 4 Auth tests.
Added 14 bbcode_full_parse tests.
Added 4 bbcode_regex_parse tests.
Fixed a bug in one of the bbcode_full_parse tests.

Apparently, routes.go wasn't commited in the previous commit o_o

--- a/templates/socialgroups_view_group.html
+++ b/templates/socialgroups_view_group.html
@@ -9,10 +9,11 @@
 
 <div class="sgBackdrop">
 	<div class="miniMenu">
-		<div class="menuItem"><a href="#">Test Group</a></div>
+		<div class="menuItem"><a href="/group/{{.SocialGroup.ID}}">{{.SocialGroup.Name}}</a></div>
 		<div class="menuItem"><a href="#">About</a></div>
-		<div class="menuItem"><a href="#">Members</a></div>
+		<div class="menuItem"><a href="/group/members/{{.SocialGroup.ID}}">Members</a></div>
 		<div class="menuItem rightMenu"><a href="#">Edit</a></div>
+		<div class="menuItem rightMenu"><a href="/topics/create/{{.Forum.ID}}">Reply</a></div>
 		<div class="menuItem rightMenu"><a href="/group/join/{{.SocialGroup.ID}}">Join</a></div>
 	</div>
 	<div style="clear: both;"></div>
